--- a/registry/package.json
+++ b/registry/package.json
@@ -16,7 +16,7 @@
     "test": "NODE_ENV=test mocha",
     "postinstall": "npm run migrate && npm run seed"
   },
-  "author": "Vladlen Fedosov",
+  "author": "Vladlen Fedosov1",
   "license": "Apache-2.0",
   "devDependencies": {
     "@types/config": "0.0.34",
